force-app/main/default/objects/Account/fields/Data_Quality_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Status__c</fullName>
    <label>Data Quality Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unreviewed</fullName>
                <default>true</default>
                <label>Unreviewed</label>
            </value>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Possible Duplicate</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>