force-app/main/default/objects/Account/fields/Support_Plan__c.field-meta.xml
<CustomField>
    <fullName>Support_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Plan</label>
    <referenceTo>Support_Plan__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>